Fix animations, button functionality, and text readability - All issues resolved

--- a/src/components/InteractiveCard.module.css
+++ b/src/components/InteractiveCard.module.css
@@ -99,7 +99,7 @@
 }
 
 /* Card Content */
-.interactive-card__content {
+.interactiveCard__content {
   position: relative;
   z-index: 2;
   height: 100%;
@@ -107,7 +107,7 @@
   flex-direction: column;
 }
 
-.interactive-card__title {
+.interactiveCard__title {
   margin: 0 0 0.5rem 0;
   font-size: 1.25rem;
   font-weight: 600;
@@ -115,7 +115,7 @@
   line-height: 1.4;
 }
 
-.interactive-card__subtitle {
+.interactiveCard__subtitle {
   margin: 0 0 1rem 0;
   font-size: 0.875rem;
   color: var(--ifm-color-emphasis-700);
@@ -123,7 +123,7 @@
   line-height: 1.5;
 }
 
-.interactive-card__body {
+.interactiveCard__body {
   flex: 1;
   display: flex;
   flex-direction: column;
